--- a/DocumentationGenerator/wwwroot/css/site.css
+++ b/DocumentationGenerator/wwwroot/css/site.css
@@ -54,3 +54,32 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.page__title {
+	margin-top: 50px;
+	margin-bottom: 80px;
+}
+
+.section {
+	margin: 30px 0;
+}
+
+.section__name {
+	padding: 10px 0;
+	text-transform: capitalize;
+	font-weight: 500;
+	font-size: 2rem;
+}
+
+.section__content {
+	background-color: #F5F5F5;
+	padding: 20px 20px;
+}
+
+.title {
+	margin: 40px 0 10px 0;
+}
+
+.description {
+	font-size: 1.5rem;
+}
