--- a/DocumentationGenerator/Pages/Documentation.cshtml
+++ b/DocumentationGenerator/Pages/Documentation.cshtml
@@ -5,7 +5,9 @@
 	ViewData["Title"] = "Documentation";
 }
 
-<div class="container">
+<div class="background"><div class="layer"></div></div>
+
+<div class="container documentation-container">
     <h1 class="title">
         @Model.Processor.Title
     </h1>
