--- a/DocumentationGenerator/wwwroot/css/site.css
+++ b/DocumentationGenerator/wwwroot/css/site.css
@@ -1,58 +1,9 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
+﻿html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
 }
 
 .page__title {
@@ -82,4 +33,39 @@ body {
 
 .description {
 	font-size: 1.5rem;
+}
+
+.description__dke ewt{
+	border-top: red;
+}
+
+.documentation-container {
+	border-radius: 30px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	padding: 20px 40px;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+	background-color: white;
+}
+
+.background {
+	z-index: -10;
+	top: 0;
+	left: 0;
+	width:100%;
+	height:100%;
+	background-size:cover;
+	position: fixed;
+	background: url("../images/bg.jpeg") no-repeat center center fixed;
+}
+
+.layer {
+	z-index: -10;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: white;
+	opacity: .9;
 }
