--- a/DocumentationGenerator/Pages/Index.cshtml
+++ b/DocumentationGenerator/Pages/Index.cshtml
@@ -14,6 +14,6 @@
 			<label asp-for="UploadFile"></label>
 			<input asp-for="UploadFile" type="file" class="form-control-file"/>
 		</div>
-		<input type="submit" value="Upload"/>
+		<button type="submit">Upload</button>
 	</form>
 </div>
