--- a/DocumentationGenerator/Pages/_TagPartial.cshtml
+++ b/DocumentationGenerator/Pages/_TagPartial.cshtml
@@ -19,7 +19,7 @@
                         @pair.Key
                     </div>
                     <div class="value">
-                        @pair.Value
+                        @Model.GetProcessedValue(pair.Value)
                     </div>
                 </div>
             </div>
